fixed items alignment in top header for mobile

--- a/packages/augur-ui/src/modules/app/components/top-bar.styles.less
+++ b/packages/augur-ui/src/modules/app/components/top-bar.styles.less
@@ -2,7 +2,6 @@
 
 // Used in Betting UI
 .TopBar {
-  align-items: center;
   background: @color-dark-grey;
   display: flex;
   font-size: @size-14;
